# HiCAL

./: CoreTrec.yml  HiCAL.yml  README.md
CALEngine/: CAL.yml  Dockerfile  Makefile  README.md  api.py  bmi.cc  bmi_cli.cc  build.sh  gainCurve.py  generate_paragraphs.py  plotRAvg.py  preview.sh  restore.sh  runAll.sh  simulate_CAL_P.py  xpaths.py
CALEngine-painless/: .clang-format  CMakeLists.txt  README.md
CALEngine-painless/cmake/: googletest-download.cmake  googletest.cmake
CALEngine-painless/include/cal/: process.h
CALEngine-painless/include/dataset/: dataset-memory.h  dataset.h
CALEngine-painless/include/estimator/: estimator.h
CALEngine-painless/include/featurizer/: featurizer.h  tfidf.h
CALEngine-painless/include/utils/: logging.h  sf-sparse-vector.h  text-utils.h
CALEngine-painless/src/: CMakeLists.txt  corpus_parser.cc  main.cc
CALEngine-painless/src/dataset/: dataset-memory.cc
CALEngine-painless/src/featurizer/: tfidf.cc
CALEngine-painless/src/utils/: porter.c  sf-sparse-vector.cc  text-utils.cc
CALEngine-painless/test/: CMakeLists.txt  dataset.cc  nlp-utils.cc  tfidf.cc
CALEngine/fcgi_config/: fastcgi.conf  nginx.conf
CALEngine/sofiaml/: sf-data-set.cc  sf-sparse-vector.cc
CALEngine/src/: bmi.cc  bmi.h  bmi_cli.cc  bmi_doc_scal.cc  bmi_doc_scal.h  bmi_fcgi.cc  bmi_forget.h  bmi_online_learning.cc  bmi_online_learning.h  bmi_para.cc  bmi_para.h  bmi_para_scal.cc  bmi_para_scal.h  bmi_precision_delay.cc  bmi_precision_delay.h  bmi_recency_weighting.h  bmi_reduced_ranking.cc  bmi_reduced_ranking.h  bmi_reduced_ranking_dynamic.h  cal_greedy.cc  classifier.cc  classifier.h  corpus_parser.cc  dataset.cc  dataset.h  features.cc  features.h  scorer.cc  scorer.h  sofia_cli.cc  test_scorer.cc
CALEngine/src/sofiaml/: sf-data-set.cc  sf-data-set.h  sf-sparse-vector.cc  sf-sparse-vector.h  sf-weight-vector.cc  sf-weight-vector.h  sofia-ml-methods.cc  sofia-ml-methods.h
CALEngine/src/utils/: feature_parser.cc  feature_parser.h  feature_writer.cc  feature_writer.h  features.h  helpers.cc  helpers.h  porter.c  test.cc  text_utils.cc  text_utils.h  utils.cc  utils.h
CALEngine/tests/: test_feature_parsers.cc  test_scorer.cc
HiCALWeb/: .coveragerc  .editorconfig  README.rst  env.example  manage.py
HiCALWeb/config/: urls.py  wsgi.py
HiCALWeb/config/settings/: README.md  base.py  local.py  production.py
HiCALWeb/docs/: Makefile  components.rst  conf.py  index.rst  make.bat  setup.rst
HiCALWeb/hicalweb/CAL/: apps.py  exceptions.py  urls.py  views.py
HiCALWeb/hicalweb/allauth/: forms.py
HiCALWeb/hicalweb/archive/: apps.py  urls.py  views.py
HiCALWeb/hicalweb/contrib/: __init__.py
HiCALWeb/hicalweb/iterative/: apps.py  urls.py  views.py
HiCALWeb/hicalweb/judgment/: README.md  admin.py  apps.py  forms.py  helpers.py  models.py  urls.py  views.py
HiCALWeb/hicalweb/progress/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
HiCALWeb/hicalweb/search/: apps.py  helpers.py  logging_messages.py  urls.py  views.py
HiCALWeb/hicalweb/templates/: base.html  old_base.html  raven-config.html
HiCALWeb/hicalweb/topic/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
HiCALWeb/hicalweb/users/: admin.py  apps.py  models.py  urls.py  views.py
HiCALWeb/logs/: django_treccoreweb_format.json
HiCALWeb/requirements/: base.txt  local.txt  production.txt
TrecCoreWeb/: .coveragerc  .editorconfig  .gitignore  README.rst  local.yml  manage.py  production.yml  restore.py  setup.cfg
TrecCoreWeb/config/: urls.py  wsgi.py
TrecCoreWeb/config/latinSquare/: HT.nisttopics.top60.json  HTNISTTopicsTop60.py  generateLatinSquare.py  nist.topics  treatments.py
TrecCoreWeb/config/settings/: README.md  base.py  local.py  production.py
TrecCoreWeb/docs/: Makefile  components.rst  conf.py  docker.md  index.rst  logging.rst  make.bat  setup.rst  users.rst
TrecCoreWeb/latinSquare/: user.json
TrecCoreWeb/logs/: README.md  django_treccoreweb_format.json  user_logs.py
TrecCoreWeb/requirements/: base.txt  production.txt
TrecCoreWeb/treccoreweb/: __init__.py
TrecCoreWeb/treccoreweb/CAL/: apps.py  logging_messages.py  urls.py  views.py
TrecCoreWeb/treccoreweb/allauth/: forms.py
TrecCoreWeb/treccoreweb/archive/: apps.py  urls.py  views.py
TrecCoreWeb/treccoreweb/contrib/: __init__.py
TrecCoreWeb/treccoreweb/iterative/: apps.py  urls.py  views.py
TrecCoreWeb/treccoreweb/judgment/: admin.py  apps.py  helpers.py  models.py  urls.py  views.py
TrecCoreWeb/treccoreweb/middleware/: pagefile.py  timer.py
TrecCoreWeb/treccoreweb/progress/: admin.py  apps.py  forms.py  logging_messages.py  models.py  urls.py  views.py
config/nginx/: nginx.conf
electron-CAL/: main.js  package.json
(+254 files in other folders)
